apps/open-webui/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: open-webui
  labels:
    goldilocks.fairwinds.com/enabled: "true"
